refactor scss, fix slider items

--- a/src/index.html
+++ b/src/index.html
@@ -298,11 +298,21 @@
       <a href="#" class="inst__link link">Follow us</a>
 
       <figure class="inst__gallery">
-        <img class="inst__img inst__img--1" src="src/img/8.png" alt="" width="130">
-        <img class="inst__img inst__img--2" src="src/img/1.png" alt="" width="130">
-        <img class="inst__img inst__img--3" src="src/img/5.png" alt="" width="130">
-        <img class="inst__img inst__img--4" src="src/img/2.png" alt="" width="145">  
-        <img class="inst__img inst__img--5" src="src/img/4.png" alt="" width="145">              
+        <div class="inst__item inst__item--1">
+          <img class="inst__img" src="src/img/8.png" alt="" width="130">
+        </div>
+        <div class="inst__item inst__item--2">
+          <img class="inst__img" src="src/img/1.png" alt="" width="130">
+        </div>
+        <div class="inst__item inst__item--3">
+          <img class="inst__img" src="src/img/5.png" alt="" width="130">
+        </div>
+        <div class="inst__item inst__item--4">
+          <img class="inst__img" src="src/img/2.png" alt="" width="145">
+        </div>
+        <div class="inst__item inst__item--5">
+          <img class="inst__img" src="src/img/4.png" alt="" width="145">
+        </div>
       </figure>
 
     </section>
@@ -324,7 +334,7 @@
         Sign Up
         <span class="material-icons sub__bnt-icon">
           arrow_right_alt
-          </span>
+        </span>
       </button>
 
     </div>
